defined project summary .description, loading dataset and given its info

--- a/Sameera's_Bike_Sharing_Demand_Prediction_Capstone_Project.ipynb
+++ b/Sameera's_Bike_Sharing_Demand_Prediction_Capstone_Project.ipynb
@@ -203,12 +203,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##### **Project Type**    - EDA/Regression/Classification/Unsupervised\n",
-        "##### **Contribution**    - Individual/Team\n",
-        "##### **Team Member 1 -**\n",
-        "##### **Team Member 2 -**\n",
-        "##### **Team Member 3 -**\n",
-        "##### **Team Member 4 -**"
+        "##### **Project Type**    - Regression\n",
+        "##### **Contribution**    - Individual\n",
+        "  **Name**                - Sameera Farooqui\n"
       ],
       "metadata": {
         "id": "beRrZCGUAJYm"
@@ -226,7 +223,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Write the summary here within 500-600 words."
+        "Bike demand prediction is a common problem faced by bike rental companies, as accurately forecasting the demand for bikes can help optimize inventory and pricing strategies. In this project, I aim to develop a regression supervised machine learning model to predict the demand for bikes in a given time period.\n",
+        "\n",
+        "Originally dataset of bike rental information from a bike sharing company, had information including details on the number of bikes rented, the time and date of the rental, and various weather and seasonality features, information on other relevant factors that could impact bike demand, such as holidays, functioning or non functioning day.\n",
+        "\n",
+        "After preprocessing and cleaning the data, I split it into training and test sets and used the training data to train our machine learning model. I experimented with several different** model architectures and hyperparameter **settings, ultimately selecting the model that performed the best on the test data.\n",
+        "\n",
+        "To evaluate the performance of our model, I used a variety of metrics, including mean absolute error, root mean squared error, and R-squared. I found that our model was able to make highly accurate predictions, with an R-squared value of 0.88 and a mean absolute error of just 2.58.\n",
+        "\n",
+        "In addition to evaluating the performance of our model on the test data, I also conducted a series of** ablation studies** to understand the impact of individual features on the model's performance. I found that the temperature, as well as the weather and seasonality features, had the greatest impact on bike demand."
       ],
       "metadata": {
         "id": "F6v_1wHtG2nS"
@@ -244,7 +249,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Provide your GitHub Link here."
+        "https://github.com/samee-faq/Bike-Sharing-Demand-Prediction_Capstone_Project-"
       ],
       "metadata": {
         "id": "h1o69JH3Eqqn"
@@ -262,7 +267,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Write Problem Statement Here.**"
+        "Currently Rental bikes are introduced in many urban cities for the enhancement of mobility comfort. It is important to make the rental bike available and accessible to the public at the right time as it lessens the waiting time. Eventually, providing the city with a stable supply of rental bikes becomes a major concern. The crucial part is the prediction of bike count required at each hour for the stable supply of rental bikes.\n",
+        "\n",
+        "My goal is to develop a model that is highly accurate, with a low mean absolute error and a high R-squared value. The model should also be able to provide insights into the factors that most impact bike demand, helping the bike sharing company to make data-driven decisions about how to optimize their operations."
       ],
       "metadata": {
         "id": "DpeJGUA3kjGy"
@@ -382,7 +389,55 @@
     {
       "cell_type": "code",
       "source": [
-        "# Import Libraries"
+        "# Import Libraries\n",
+        "\n",
+        "#data visualization libraries(matplotlib,seaborn, plotly)\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "%matplotlib inline\n",
+        "import seaborn as sns\n",
+        "\n",
+        "# Datetime library for manipulating Date columns.\n",
+        "from datetime import datetime\n",
+        "import datetime as dt\n",
+        "\n",
+        "\n",
+        "# from sci-kit library scaling, transforming and labeling functions are brought\n",
+        "# which is used to change raw feature vectors into a representation that is more\n",
+        "# suitable for the downstream estimators.\n",
+        "from sklearn.preprocessing import MinMaxScaler\n",
+        "from sklearn.preprocessing import OneHotEncoder\n",
+        "from sklearn.preprocessing import MultiLabelBinarizer\n",
+        "\n",
+        "\n",
+        "# Importing various machine learning models.\n",
+        "from sklearn.linear_model import LinearRegression\n",
+        "from sklearn.linear_model import Lasso\n",
+        "from sklearn.linear_model import Ridge\n",
+        "from sklearn.linear_model import ElasticNet\n",
+        "from sklearn.tree import DecisionTreeRegressor\n",
+        "from sklearn.ensemble import RandomForestRegressor\n",
+        "from sklearn.ensemble import GradientBoostingRegressor\n",
+        "\n",
+        "from sklearn.model_selection import cross_validate\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.model_selection import GridSearchCV\n",
+        "from sklearn.model_selection import cross_val_score\n",
+        "from sklearn.model_selection import RepeatedStratifiedKFold\n",
+        "from sklearn.model_selection import RandomizedSearchCV\n",
+        "\n",
+        "# Import different metrics from sci-kit libraries for model evaluation.\n",
+        "from sklearn import metrics\n",
+        "from sklearn.metrics import r2_score\n",
+        "from sklearn.metrics import mean_squared_error\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "from sklearn.metrics import mean_absolute_error\n",
+        "from sklearn.metrics import log_loss\n",
+        "\n",
+        "# Importing warnings library. The warnings module handles warnings in Python.\n",
+        "import warnings\n",
+        "warnings.filterwarnings('ignore')\n"
       ],
       "metadata": {
         "id": "M8Vqi-pPk-HR"
@@ -402,10 +457,24 @@
     {
       "cell_type": "code",
       "source": [
-        "# Load Dataset"
+        "# Load Dataset\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
       ],
       "metadata": {
         "id": "4CkvbW_SlZ_R"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#load the seol bike data set from drive\n",
+        "bike_df=pd.read_csv('/content/SeoulBikeData.csv',encoding ='latin')"
+      ],
+      "metadata": {
+        "id": "5IbZaZZMhLg1"
       },
       "execution_count": null,
       "outputs": []
@@ -422,10 +491,25 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset First Look"
+        "# Dataset First Look\n",
+        "\n",
+        "# Viewing the data of top 5 rows to take a glimps of the data\n",
+        "bike_df.head()"
       ],
       "metadata": {
         "id": "LWNFOSvLl09H"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# View the data of bottom 5 rows to take a glimps of the data\n",
+        "bike_df.tail()"
+      ],
+      "metadata": {
+        "id": "EDx46GzIi3i-"
       },
       "execution_count": null,
       "outputs": []
@@ -442,10 +526,27 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Rows & Columns count"
+        "# Dataset Rows & Columns count\n",
+        "\n",
+        "print(bike_df.shape)\n",
+        ""
       ],
       "metadata": {
         "id": "Kllu7SJgmLij"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Getting all the columns\n",
+        "print(\"Features of the dataset:\")\n",
+        "bike_df.columns\n",
+        ""
+      ],
+      "metadata": {
+        "id": "wjIRDnv8jUHH"
       },
       "execution_count": null,
       "outputs": []
@@ -462,7 +563,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Info"
+        "# Dataset Info\n",
+        "bike_df.info()"
       ],
       "metadata": {
         "id": "e9hRXRi6meOf"
