described our data set and done data wrangling to make our data analysis ready

--- a/Sameera's_Bike_Sharing_Demand_Prediction_Capstone_Project.ipynb
+++ b/Sameera's_Bike_Sharing_Demand_Prediction_Capstone_Project.ipynb
@@ -6,27 +6,6 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [
-        "vncDsAP0Gaoa",
-        "FJNUwmbgGyua",
-        "w6K7xa23Elo4",
-        "yQaldy8SH6Dl",
-        "mDgbUHAGgjLW",
-        "O_i_v8NEhb9l",
-        "HhfV-JJviCcP",
-        "Y3lxredqlCYt",
-        "3RnN4peoiCZX",
-        "x71ZqKXriCWQ",
-        "7hBIi_osiCS2",
-        "JlHwYmJAmNHm",
-        "35m5QtbWiB9F",
-        "PoPl-ycgm1ru",
-        "H0kj-8xxnORC",
-        "nA9Y7ga8ng1Z",
-        "PBTbrJXOngz2",
-        "u3PMJOP6ngxN",
-        "dauF4eBmngu3",
-        "bKJF3rekwFvQ",
-        "MSa1f5Uengrz",
         "GF8Ens_Soomf",
         "0wOQAZs5pc--",
         "K5QZ13OEpz2H",
@@ -584,7 +563,10 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Duplicate Value Count"
+        "# Dataset Duplicate Value Count\n",
+        "print(f\"Data is duplicated ? {bike_df.duplicated().value_counts()},unique values with {len(bike_df[bike_df.duplicated()])} duplication\")\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "1sLdpKYkmox0"
@@ -604,7 +586,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Missing Values/Null Values Count"
+        "# Missing Values/Null Values Count\n",
+        "bike_df.isnull().sum()"
       ],
       "metadata": {
         "id": "GgHWkxvamxVg"
@@ -615,7 +598,10 @@
     {
       "cell_type": "code",
       "source": [
-        "# Visualizing the missing values"
+        "# Visualizing the missing values\n",
+        "# Checking Null Value by plotting Heatmap\n",
+        "\n",
+        "sns.heatmap(bike_df.isnull(), cbar=False);"
       ],
       "metadata": {
         "id": "3q5wnI3om9sJ"
@@ -635,7 +621,27 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "*   There are 8760 observation and 14 features.\n",
+        "*   In a day we have 24 hours and we have 365 days a year so 365 multiplied by 24 = 8760, which represents the number of line in the dataset.\n",
+        "\n",
+        "*   There are no null values.\n",
+        "*   Dataset has all unique values i.e., there is no duplicate, which means data is free from bias as duplicates which can cause problems in downstream analysis, such as biasing results or making it difficult to accurately summarize the data.\n",
+        "\n",
+        "*   Date has some object data types, it should be datetime data type.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "gfoNAAC-nUe_"
@@ -653,7 +659,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Columns"
+        "# Dataset Columns\n",
+        "print(f'Features: {bike_df.columns.to_list()}')"
       ],
       "metadata": {
         "id": "j7xfkqrt5Ag5"
@@ -664,7 +671,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Describe"
+        "# Dataset Describe\n",
+        "bike_df.describe()"
       ],
       "metadata": {
         "id": "DnOaZdaE5Q5t"
@@ -684,7 +692,35 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "# **Following are the variables of aur dataset-**\n",
+        "\n",
+        "**Date** : The date of the day, during 365 days from 01/12/2017 to 30/11/2018, formating in DD/MM/YYYY, type : str, we need to convert into datetime format.\n",
+        "\n",
+        "**Rented Bike Count** : Number of rented bikes per hour which our dependent variable and we need to predict that, type : int\n",
+        "\n",
+        "**Hour**: The hour of the day, starting from 0-23 it's in a digital time format, type : int, we need to convert it into category data type.\n",
+        "\n",
+        "**Temperature(°C)**: Temperature in Celsius, type : Float\n",
+        "\n",
+        "**Humidity(%)**: Humidity in the air in %, type : int\n",
+        "\n",
+        "**Wind speed (m/s)** : Speed of the wind in m/s, type : Float\n",
+        "\n",
+        "**Visibility (10m)**: Visibility in m, type : int\n",
+        "\n",
+        "**Dew point temperature(°C)**: Temperature at the beggining of the day, type : Float\n",
+        "\n",
+        "**Solar Radiation (MJ/m2)**: Sun contribution, type : Float\n",
+        "\n",
+        "**Rainfall(mm)**: Amount of raining in mm, type : Float\n",
+        "\n",
+        "**Snowfall (cm)**: Amount of snowing in cm, type : Float\n",
+        "\n",
+        "**Seasons**: Season of the year, type : str, there are only 4 season's in data .\n",
+        "\n",
+        "**Holiday**: If the day is holiday period or not, type: str\n",
+        "\n",
+        "**Functioning Day**: If the day is a Functioning Day or not, type : str"
       ],
       "metadata": {
         "id": "aJV4KIxSnxay"
@@ -702,7 +738,10 @@
     {
       "cell_type": "code",
       "source": [
-        "# Check Unique Values for each variable."
+        "# Check Unique Values for each variable.\n",
+        "# bike_df.nunique()\n",
+        "for i in bike_df.columns.tolist():\n",
+        "  print(f\"No. of unique values in {i} is {bike_df[i].nunique()}.\")"
       ],
       "metadata": {
         "id": "zms12Yq5n-jE"
@@ -729,12 +768,272 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# **Missing Values/Null Values Count**"
+      ],
+      "metadata": {
+        "id": "ukR50r4YTWsY"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# Write your code to make your dataset analysis ready."
+        "# Write your code to make your dataset analysis ready.\n",
+        "\n",
+        "# Missing Values/Null Values Count\n",
+        "bike_df.isnull().sum()"
       ],
       "metadata": {
         "id": "wk-9a2fpoLcV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Visualizing the missing values\n",
+        "missing = pd.DataFrame((bike_df.isnull().sum())*100/bike_df.shape[0]).reset_index()\n",
+        "plt.figure(figsize=(16,5))\n",
+        "ax = sns.pointplot(x='index', y=0, data=missing)\n",
+        "plt.xticks(rotation=90, fontsize=7)\n",
+        "plt.title(\"Percentage of Missing values\")\n",
+        "plt.ylabel(\"PERCENTAGE\")\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "QvFjG8qLMYGg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "***As we can see above there are no missing values.***"
+      ],
+      "metadata": {
+        "id": "Xaz4J0auM7Fc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Duplicate Values**"
+      ],
+      "metadata": {
+        "id": "jYTTf2L2NUHB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Checking Duplicate Values\n",
+        "value=len(bike_df[bike_df.duplicated()])\n",
+        "print(\"The number of duplicate values in the data set is = \",value)"
+      ],
+      "metadata": {
+        "id": "DkBIVpaPNMF6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**In the above data after count the missing and duplicate value we came to know that there are no missing and duplicate value present.**"
+      ],
+      "metadata": {
+        "id": "kX2-sehfNv92"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Changing column name**\n",
+        "\n",
+        "\n",
+        "\n",
+        "*   *Some of the columns name in the dataset are too large and clumsy so we change them into some simple name, and it will not affect our end results.*\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "BSrJWNdfN8Mp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Rename the complex columns name\n",
+        "bike_df=bike_df.rename(columns={'Rented Bike Count':'Rented_Bike_Count',\n",
+        "                                'Temperature(°C)':'Temperature',\n",
+        "                                'Humidity(%)':'Humidity',\n",
+        "                                'Wind speed (m/s)':'Wind_speed',\n",
+        "                                'Visibility (10m)':'Visibility',\n",
+        "                                'Dew point temperature(°C)':'Dew_point_temperature',\n",
+        "                                'Solar Radiation (MJ/m2)':'Solar_Radiation',\n",
+        "                                'Rainfall(mm)':'Rainfall',\n",
+        "                                'Snowfall (cm)':'Snowfall',\n",
+        "                                'Functioning Day':'Functioning_Day'})\n",
+        ""
+      ],
+      "metadata": {
+        "id": "tAHFXAdGN3Bl"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Breaking date column**\n",
+        "\n",
+        "*   *Python read \"Date\" column as a object type basically it reads as a string, as the date column is very important to analyze the users behaviour so we need to convert it into datetime format then we split it into 3 column i.e 'year', 'month', 'day'as a category data type.*\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "c6tklwGrOl2I"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Changing the \"Date\" column into three \"year\",\"month\",\"day\" column\n",
+        "bike_df['Date'] = bike_df['Date'].str.replace('-', '/')\n",
+        "bike_df['Date'] = bike_df['Date'].apply(lambda x: dt.datetime.strptime(x, \"%d/%m/%Y\"))\n"
+      ],
+      "metadata": {
+        "id": "6zA5OcmbOxcs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "bike_df['year'] = bike_df['Date'].dt.year\n",
+        "bike_df['month'] = bike_df['Date'].dt.month\n",
+        "bike_df['day'] = bike_df['Date'].dt.day_name()"
+      ],
+      "metadata": {
+        "id": "QzryjAWRPGMJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "*   *So we convert the \"date\" column into 3 different column i.e \"year\",\"month\",\"day\".*\n",
+        "*The \"year\" column in our data set contains the 2 unique number that contains the details  from 2017 december to 2018 november so if we consider this a year then we don't need the \"year\" column so we dropped it*.\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "WgGS7AZXPftk"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Dropping Columns**\n",
+        "\n",
+        "\n",
+        "\n",
+        "*   The column \"day\", it contains the details about each day of the month, for our relevence we don't need the data of each day of each month but we need to know, if a day is a weekday or a weekend so we convert it into this format and drop the \"day\" column*.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "oJvNPGAJPn4e"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#creating a new column of \"weekdays_weekend\" and drop the column \"Date\",\"day\",\"year\"\n",
+        "bike_df['weekdays_weekend']=bike_df['day'].apply(lambda x : 1 if x=='Saturday' or x=='Sunday' else 0 )\n",
+        "bike_df=bike_df.drop(columns=['Date','day','year'],axis=1)\n",
+        ""
+      ],
+      "metadata": {
+        "id": "OpHR2JLLRdlo"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "bike_df.head()"
+      ],
+      "metadata": {
+        "id": "OMmI54CIPnLk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "bike_df['weekdays_weekend'].value_counts()"
+      ],
+      "metadata": {
+        "id": "9cC1idspRGgB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Changing data type**\n",
+        "\n",
+        "*  *As \"Hour\",\"month\",\"weekdays_weekend\" column are in a integer data type format but actually it is a category data type so we need to change this data type if we don't change it then, while doing the further anlysis and the values are not actually true so we could mislead by this.*\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "uu3uSMW5R3pq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Change the int64 column into catagory column\n",
+        "cols=['Hour','month','weekdays_weekend']\n",
+        "for col in cols:\n",
+        "  bike_df[col]=bike_df[col].astype('category')\n",
+        ""
+      ],
+      "metadata": {
+        "id": "NTYxGQlESqZZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#let's check the result of data type\n",
+        "bike_df.info()\n",
+        ""
+      ],
+      "metadata": {
+        "id": "UAWRd-m9Sxzg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "bike_df.columns"
+      ],
+      "metadata": {
+        "id": "jx7HpKjZS4np"
       },
       "execution_count": null,
       "outputs": []
@@ -751,7 +1050,27 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "# **For making our data analysis ready we have done these following changes in our data set.**\n",
+        "\n",
+        "\n",
+        "*  Handling Missing Values/Null Values Count\n",
+        "*  Handling Duplicate Values\n",
+        "*  Changing data type\n",
+        "*  Dropping Columns\n",
+        "*  Breaking date column\n",
+        "*  Changing column name\n",
+        "\n",
+        "\n",
+        "# **Insights we found are as follows:-**\n",
+        "\n",
+        "*   The handling of missing data is very important during the preprocessing of the dataset as many machine learning algorithms do not support missing values.that's why we check missing values first*.And as we can see there are no missing values in our data set.*\n",
+        "*   \"Duplication\"  means that you have repeated data in your dataset. This could be due to things like data entry errors or data collection methods. By removing duplication in our data set, we can save Time and money.*In the above data after counting the missing and duplicate value we came to know that there are no missing and duplicate value present.*\n",
+        "*   We change some coloumn name into some simple name.\n",
+        "*   Python read \"Date\" column as a object type basically it reads as a string, as the date column is very important to analyze the users behaviour so we need to convert it into datetime format then we split it into 3 column i.e 'year', 'month', 'day'as a category data type.*\n",
+        "*   Dropped some unnecessory columns to improve running time.\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "LbyXE7I1olp8"
