Analyze the data and visualize some charts

--- a/Sameera's_Bike_Sharing_Demand_Prediction_Capstone_Project.ipynb
+++ b/Sameera's_Bike_Sharing_Demand_Prediction_Capstone_Project.ipynb
@@ -6,31 +6,6 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [
-        "GF8Ens_Soomf",
-        "0wOQAZs5pc--",
-        "K5QZ13OEpz2H",
-        "lQ7QKXXCp7Bj",
-        "448CDAPjqfQr",
-        "KSlN3yHqYklG",
-        "t6dVpIINYklI",
-        "ijmpgYnKYklI",
-        "-JiQyfWJYklI",
-        "EM7whBJCYoAo",
-        "fge-S5ZAYoAp",
-        "85gYPyotYoAp",
-        "RoGjAbkUYoAp",
-        "4Of9eVA-YrdM",
-        "iky9q4vBYrdO",
-        "F6T5p64dYrdO",
-        "y-Ehk30pYrdP",
-        "bamQiAODYuh1",
-        "QHF8YVU7Yuh3",
-        "GwzvFGzlYuh3",
-        "qYpmQ266Yuh3",
-        "OH-pJp9IphqM",
-        "bbFf2-_FphqN",
-        "_ouA3fa0phqN",
-        "Seke61FWphqN",
         "PIIx-8_IphqN",
         "t27r6nlMphqO",
         "r2jJGEOYphqO",
@@ -454,6 +429,18 @@
       ],
       "metadata": {
         "id": "5IbZaZZMhLg1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "VaPG6HTdkClC"
       },
       "execution_count": null,
       "outputs": []
@@ -1088,7 +1075,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Chart - 1"
+        "#### Chart - 1\n",
+        "\n",
+        "# **Count of Rented bikes acording to Month using Bar plot**"
       ],
       "metadata": {
         "id": "0wOQAZs5pc--"
@@ -1097,7 +1086,12 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 1 visualization code"
+        "# Chart - 1 visualization code\n",
+        "#anlysis of data by vizualisation\n",
+        "fig,ax=plt.subplots(figsize=(12,7))\n",
+        "sns.barplot(data=bike_df,x='month',y='Rented_Bike_Count',ax=ax,capsize=.2)\n",
+        "ax.set(title='Count of Rented bikes acording to Month')\n",
+        ""
       ],
       "metadata": {
         "id": "7v_ESjsspbW7"
@@ -1117,7 +1111,14 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "*  **Here we use bar plot so we can easily visualize the bike counts according to months.**\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "XESiWehPqBRc"
@@ -1135,7 +1136,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "\n",
+        "\n",
+        "*   **From the above bar plot we can clearly say that, from month 5 to 10\n",
+        "(May - October) the demand of the rented bike is high as compare to other months.These months came in  summer season.**\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "C_j1G7yiqdRP"
@@ -1154,7 +1160,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "\n",
+        "\n",
+        "*   **Yes this insight help creating positive business impact as we came to know that in summer season we have high demand of rented bikes so we can increase the counts of bike in this season to maintain the demand of rented bikes. **\n",
+        "\n"
       ],
       "metadata": {
         "id": "3cspy4FjqxJW"
@@ -1163,7 +1172,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Chart - 2"
+        "#### Chart - 2\n",
+        "\n",
+        "# **Count of Rented bikes acording to weekdays_weekenday using Point plot.**"
       ],
       "metadata": {
         "id": "KSlN3yHqYklG"
@@ -1172,7 +1183,11 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 2 visualization code"
+        "# Chart - 2 visualization code\n",
+        "fig,ax=plt.subplots(figsize=(12,7))\n",
+        "sns.pointplot(data=bike_df,x='Hour',y='Rented_Bike_Count',hue='weekdays_weekend',ax=ax)\n",
+        "ax.set(title='Count of Rented bikes acording to weekdays_weekend/hour ')\n",
+        ""
       ],
       "metadata": {
         "id": "R4YgtaqtYklH"
@@ -1192,7 +1207,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "\n",
+        "\n",
+        "*   **By using point plot we can easily take a look upon hourly counts of rented bike on weekend.**\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "5aaW0BYyYklI"
@@ -1210,7 +1229,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "\n",
+        "\n",
+        "*  **From the above point plot we can say that, in the week days which represent in blue colur show that the demand of the bike higher because of the office Peak Time are 7 am to 9 am and 5 pm to 7 pm*.The orange colour represent the weekend days, and it show that the demand of rented bikes are very low specially in the morning hour but when the evening start from 4 pm to 8 pm the demand slightly increases.**\n"
       ],
       "metadata": {
         "id": "PSx9atu2YklI"
@@ -1229,7 +1250,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "**Yes this insight is helpful beacause we came to know that in what time in a day we have high demands of bikes as well as low demands of bikes.Now we can shift  the number of bikes in that specific time in which we have high demand.**"
       ],
       "metadata": {
         "id": "BcBbebzrYklV"
@@ -1238,7 +1259,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Chart - 3"
+        "#### Chart - 3\n",
+        "\n",
+        "# **Count of Rented bikes acording to Hour using Bar plot.**"
       ],
       "metadata": {
         "id": "EM7whBJCYoAo"
@@ -1247,7 +1270,11 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 3 visualization code"
+        "# Chart - 3 visualization code\n",
+        "fig,ax=plt.subplots(figsize=(12,7))\n",
+        "sns.barplot(data=bike_df,x='Hour',y='Rented_Bike_Count',ax=ax,capsize=.2)\n",
+        "ax.set(title='Count of Rented bikes acording to Hour ')\n",
+        ""
       ],
       "metadata": {
         "id": "t6GMdE67YoAp"
@@ -1267,7 +1294,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "\n",
+        "\n",
+        "*   **Here we have used bar plot to look upon the hourly counts of rented bikes**\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "5dBItgRVYoAp"
@@ -1285,7 +1316,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "\n",
+        "\n",
+        "*   **The above plot shows, the use of rented bike according  to the hours from the data of all over the year.**\n",
+        "\n",
+        "*   **Generally people use rented bikes during their working hour from 7am to 9am and 5pm to 7pm.**\n",
+        "\n"
       ],
       "metadata": {
         "id": "4jstXR6OYoAp"
@@ -1304,7 +1340,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "\n",
+        "\n",
+        "*  **Yes this insight is helpful beacause we came to know that in what time in a day we have high demands of bikes as well as low demands of bikes.Now we can shift  the number of bikes in that specific time in which we have high demand.**\n",
+        "\n"
       ],
       "metadata": {
         "id": "zfJ8IqMcYoAp"
@@ -1313,7 +1352,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Chart - 4"
+        "#### Chart - 4\n",
+        "# **Count of Rented bikes acording to Functioning Day/hour**"
       ],
       "metadata": {
         "id": "4Of9eVA-YrdM"
@@ -1322,7 +1362,11 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 4 visualization code"
+        "# Chart - 4 visualization code\n",
+        "fig,ax=plt.subplots(figsize=(12,7))\n",
+        "sns.pointplot(data=bike_df,x='Hour',y='Rented_Bike_Count',hue='Functioning_Day',ax=ax)\n",
+        "ax.set(title='Count of Rented bikes acording to Functioning Day ')\n",
+        ""
       ],
       "metadata": {
         "id": "irlUoxc8YrdO"
@@ -1342,7 +1386,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "\n",
+        "\n",
+        "*   **We have used point plot to have the hourly counts of bikes according to functioning day.**\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "aJRCwT6DYrdO"
@@ -1360,7 +1408,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "\n",
+        "\n",
+        "*   ***In the above point plot which shows the use of rented bike in functioning day or non functioning day, and it clearly shows that,people don't use reneted bikes on non  functioning day.***\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "Xx8WAJvtYrdO"
@@ -1379,7 +1431,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "\n",
+        "\n",
+        "*   **Yes it can help in positive business impact.**\n",
+        "\n"
       ],
       "metadata": {
         "id": "jLNxxz7MYrdP"
@@ -1388,7 +1443,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Chart - 5"
+        "#### Chart - 5\n",
+        "\n",
+        "# **Count of Rented bikes acording to Seasons.**"
       ],
       "metadata": {
         "id": "bamQiAODYuh1"
@@ -1397,7 +1454,10 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 5 visualization code"
+        "# Chart - 5 visualization code\n",
+        "fig,ax=plt.subplots(figsize=(12,6))\n",
+        "sns.barplot(data=bike_df,x='Seasons',y='Rented_Bike_Count',ax=ax,capsize=.2)\n",
+        "ax.set(title='Count of Rented bikes acording to Seasons ')"
       ],
       "metadata": {
         "id": "TIJwrbroYuh3"
@@ -1417,7 +1477,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "\n",
+        "\n",
+        "*   **We used bar plot to have the counts of bike according to different season.**\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "dcxuIMRPYuh3"
@@ -1435,7 +1499,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "\n",
+        "\n",
+        "*   **We can clearly saw in  above chart that in summer season we have highest demand followed by autumn and spring season.**\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "uyqkiB8YYuh3"
@@ -1454,7 +1522,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "\n",
+        "\n",
+        "*   **We can increase the counts of bikes according to these season which have high demands.**"
       ],
       "metadata": {
         "id": "_WtzZ_hCYuh4"
@@ -1463,7 +1533,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Chart - 6"
+        "#### Chart - 6\n",
+        "\n",
+        "# **Count of Rented bikes acording to Seasons/Hour**"
       ],
       "metadata": {
         "id": "OH-pJp9IphqM"
@@ -1472,7 +1544,10 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 6 visualization code"
+        "# Chart - 6 visualization code\n",
+        "fig,ax=plt.subplots(figsize=(12,6))\n",
+        "sns.pointplot(data=bike_df,x='Hour',y='Rented_Bike_Count',hue='Seasons',ax=ax)\n",
+        "ax.set(title='Count of Rented bikes acording to seasons ')"
       ],
       "metadata": {
         "id": "kuRf4wtuphqN"
@@ -1492,7 +1567,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "\n",
+        "\n",
+        "*   **By this Point plot we have clearly visualize the hourly count of bikes according to seasons.**\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "loh7H2nzphqN"
@@ -1510,7 +1589,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "\n",
+        "\n",
+        "*   **The above point plot shows, the use of rented bike in four different seasons, and it clearly shows that In summer season the use of rented bike is high and peak time is 7am-9am and 5pm-7pm. In winter season the use of rented bike is very low maybe because of snowfall, fog, cold etc.**\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "VECbqPI7phqN"
@@ -1529,7 +1612,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "\n",
+        "\n",
+        "*   **As we can see that in winter season use of rented bike is low because of cold wheather this  can lead to negative growth for this particular season**\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "DW4_bGpfphqN"
