--- a/Sameera's_Bike_Sharing_Demand_Prediction_Capstone_Project.ipynb
+++ b/Sameera's_Bike_Sharing_Demand_Prediction_Capstone_Project.ipynb
@@ -2029,214 +2029,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Hypothetical Statement - 2"
-      ],
-      "metadata": {
-        "id": "4_0_7-oCpUZd"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#### 1. State Your research hypothesis as a null hypothesis and alternate hypothesis."
-      ],
-      "metadata": {
-        "id": "hwyV_J3ipUZe"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "FnpLGJ-4pUZe"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#### 2. Perform an appropriate statistical test."
-      ],
-      "metadata": {
-        "id": "3yB-zSqbpUZe"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Perform Statistical Test to obtain P-Value"
-      ],
-      "metadata": {
-        "id": "sWxdNTXNpUZe"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### Which statistical test have you done to obtain P-Value?"
-      ],
-      "metadata": {
-        "id": "dEUvejAfpUZe"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "oLDrPz7HpUZf"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### Why did you choose the specific statistical test?"
-      ],
-      "metadata": {
-        "id": "Fd15vwWVpUZf"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "4xOGYyiBpUZf"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### Hypothetical Statement - 3"
-      ],
-      "metadata": {
-        "id": "bn_IUdTipZyH"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#### 1. State Your research hypothesis as a null hypothesis and alternate hypothesis."
-      ],
-      "metadata": {
-        "id": "49K5P_iCpZyH"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "7gWI5rT9pZyH"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#### 2. Perform an appropriate statistical test."
-      ],
-      "metadata": {
-        "id": "Nff-vKELpZyI"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Perform Statistical Test to obtain P-Value"
-      ],
-      "metadata": {
-        "id": "s6AnJQjtpZyI"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### Which statistical test have you done to obtain P-Value?"
-      ],
-      "metadata": {
-        "id": "kLW572S8pZyI"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "ytWJ8v15pZyI"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### Why did you choose the specific statistical test?"
-      ],
-      "metadata": {
-        "id": "dWbDXHzopZyI"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "M99G98V6pZyI"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "## ***6. Feature Engineering & Data Pre-processing***"
       ],
       "metadata": {
         "id": "yLjJCtPM0KBk"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### 1. Handling Missing Values"
-      ],
-      "metadata": {
-        "id": "xiyOF9F70UgQ"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Handling Missing Values & Missing Value Imputation"
-      ],
-      "metadata": {
-        "id": "iRsAHk1K0fpS"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#### What all missing value imputation techniques have you used and why did you use those techniques?"
-      ],
-      "metadata": {
-        "id": "7wuGOrhz0itI"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "1ixusLtI0pqI"
       }
     },
     {
@@ -2251,7 +2047,18 @@
     {
       "cell_type": "code",
       "source": [
-        "# Handling Outliers & Outlier treatments"
+        "# Handling Outliers & Outlier treatments\n",
+        "'''# Removing outliers by Using IQR method:\n",
+        "q1, q3, median = data_2.rented_bike_count.quantile([0.25,0.75,0.5])\n",
+        "lower_limit = q1 - 1.5*(q3-q1)\n",
+        "upper_limit = q3 + 1.5*(q3-q1)\n",
+        "data_2['rented_bike_count'] = np.where(data_2['rented_bike_count'] > upper_limit, median,np.where(data_2['rented_bike_count'] < lower_limit,median,data_2['rented_bike_count']))\n",
+        "\n",
+        "# Removing outliers by Capping:\n",
+        "for col in ['wind_speed','solar_radiation','rainfall','snowfall']:\n",
+        "  upper_limit = data_2[col].quantile(0.99)\n",
+        "  data_2[col] = np.where(data_2[col] > upper_limit, upper_limit, data_2[col])'''\n",
+        ""
       ],
       "metadata": {
         "id": "M6w2CzZf04JK"
@@ -2271,10 +2078,33 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "\n",
+        "\n",
+        "*   **Here we use IQR method and Capping method, Based on IQR method we set Upper limit and Lower limit of rented bike count and convert those outliers into median values.**\n",
+        "\n",
+        "  **Also we capp outliers upto 99th percentile and above that we convert those outliers into upper limit value.**\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "uGZz5OrT1HH-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Note :-**\n",
+        "\n",
+        "\n",
+        "\n",
+        "*   **We have tried to remove the outliers but it is seen that there is drop in performance after removing the outliers around 10% drop in model performance.**\n",
+        "\n",
+        " **So, we have decided that we will perform the model without removing the outliers**\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "BPkE2_I2XGpi"
       }
     },
     {
@@ -2289,7 +2119,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Encode your categorical columns"
+        "# Encode your categorical columns\n"
       ],
       "metadata": {
         "id": "21JmIYMG2hEo"
